--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'GV'
 - !lcsh 'Bridge whist'
+- GITenberg
 title: Bridge Axioms and Laws
 url: http://www.gutenberg.org/ebooks/38120
